feat(command): 添加修仙命令处理器和核心服务
- 在BaseCommandHandler中新增authenticateAndValidateUser和validateUserExists方法
- 新增CultivationCommandHandler处理修仙相关命令逻辑
- 新增CultivationService实现加点、洗点、突破、护道等核心功能
- 实现注册、状态查询、背包管理、装备操作等修仙命令
- 添加属性分配、突破境界、护道关系等修仙核心机制
- 实现修仙状态展示和护道信息查询功能